822 - fix issues with the cart sidebar width on mobile resolutions less than 360px

--- a/packages/venia-concept/src/components/MiniCart/miniCart.css
+++ b/packages/venia-concept/src/components/MiniCart/miniCart.css
@@ -19,7 +19,8 @@
     transition-property: opacity, transform, visibility;
     transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
     visibility: hidden;
-    width: 360px;
+    width: 100%;
+    max-width: 360px;
     z-index: var(--base-z-index);
 }
 
